# easy-escrow-ai-backend

./: .cursorrules  .dockerignore  .env.dev  .env.example  .env.staging.example  .eslintrc.js  .git-secrets-patterns  .gitignore  .mocharc.json  .pr-body.md  .prettierignore  .prod-app-id  .trigger-rebuild  API_DOCUMENTATION.md  Anchor.dev.toml  Anchor.mainnet.toml  Anchor.staging.toml  Anchor.toml  BUILD_ISSUE_RESOLUTION.md  CLAUDE.md  CRITICAL_TEST_ALIGNMENT_ISSUE.md  Cargo.toml  DATABASE_SETUP.md  DEPLOYMENT_BLOCKER.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_SUCCESS.md  DEVNET_DEPLOYMENT_STATUS.md  DOCKER_FRESH_START_QUICK_REF.md  Dockerfile  Dockerfile.solana-build  E2E_TEST_ALIGNMENT_NEEDED.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PRE_DEPLOYMENT_VERIFICATION_REPORT.md  PR_JITO_DIRECT_DESCRIPTION.md  PR_MASTER_DESCRIPTION.md  PR_SECURITY_TXT_DESCRIPTION.md  PR_STAGING_DESCRIPTION.md  PR_STAGING_ON_CHAIN_REFUNDS.md  PR_TASK_40_SUMMARY.md  (+36 more)
.claude/: settings.json
.do/: README.md  app-dev-update.yaml  app-dev.yaml  app-production.yaml  app-staging.yaml  app.yaml  production-app.yaml  redis-cloud.yaml  staging.yaml  upstash.yaml
.github/: PR_UPDATE.md  pr-update.json
.husky/: pre-commit
.taskmaster/: staging-full-canopy-tree.json  state.json  tasks.json
docs/: 2026-03-24--compliance-review-dump.md  ADR_DELEGATION_SETTLEMENT.md  ARCHITECTURE.md  ARCHIVED_AGREEMENTS_EXPLAINED.md  ATOMIC_SWAP_ENVIRONMENT_VARIABLES.md  ATOMIC_SWAP_TESTING.md  AUTHORITY_KEYPAIR_EXPLAINED.md  AUTO_REFUND_IMPLEMENTATION_SUMMARY.md  BETA_LIMITS.md  BUBBLEGUM_DELEGATION.md  BUILD_WITH_DOCKER.md  BULK_CNFT_SWAP_ARCHITECTURE.md  CLI_TOOLS_SETUP.md  CNFT_PERFORMANCE_ANALYSIS.md  CNFT_STALE_PROOF_IMPROVEMENTS.md  CNFT_SWAP_DEBUGGING.md  CNFT_TESTING_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCRIPTS_GUIDE.md  DEPLOYMENT_SECRETS_RULE_ADDED.md  DEPLOYMENT_SUMMARY.md  DEVNET_CONFIG_SECURITY.md  DEVNET_DEPLOYMENT_GUIDE.md  DEVNET_WALLET_STANDARDIZATION.md  DIGITALOCEAN_SECRETS_CONFIGURATION.md  DOCKER_CACHE_ELIMINATION.md  DOCKER_CACHE_ELIMINATION_SUMMARY.md  DOCKER_GRACEFUL_RESTART.md  DOCKER_GRACEFUL_RESTART_SUMMARY.md  DOCUMENTATION_INDEX.md  DO_E2E_VERIFICATION_SUMMARY.md  DO_INSTALL_SOLANA_ANCHOR.md  DO_SERVER_E2E_CHECKLIST.md  DO_STAGING_RECREATION_SUMMARY.md  DO_WALLET_VERIFICATION.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_SPECIFIC_IDL_IMPLEMENTATION.md  ENVIRONMENT_VARIABLES.md  FORCE_CLOSE_INSTRUCTION_DESIGN.md  JITO_API_FORMAT_VERIFICATION.md  (+35 more)
idl/: escrow.json
monitoring/: README.md
prisma/: schema.prisma  seed-staging.ts  seed.ts
programs/escrow/: Cargo.toml  README.md  onchain-idl.json
programs/escrow/src/: errors.rs  lib.rs
programs/escrow/src/instructions/: atomic_swap.rs  close.rs  datasales_escrow.rs  initialize.rs  institution_escrow.rs  mod.rs  offer_escrow.rs  pause.rs  pool_vault.rs  two_phase_swap.rs  withdraw.rs
programs/escrow/src/state/: datasales_escrow.rs  institution_escrow.rs  mod.rs  offer_escrow.rs  pool_vault.rs  treasury.rs
programs/escrow/tests/: cnft_swap_scenarios.rs  cnft_validation.rs
scripts/: README.md  build-docker.ps1  build-force-close-transactions.ts  check-account-discriminator.ts  check-changelog-buffer.ts  check-cnft-compatibility.ts  check-db-agreement.ts  check-escrow-assets.ts  check-production-health.sh  check-rent-simple.ts  check-rent.ts  check-tree-root-onchain.ts  cleanup-duplicate-monkeys.ts  cleanup-old-cnfts-staging.ts  cleanup-staging-agreements.ts  close-staging-escrows.ts  compare-das-vs-onchain-root.ts  convert-keys-to-base58.js  create-admin-keypair.ts  create-production-alt.ts  debug-das-api-caching.ts  debug-trace-single.ts  deploy-to-devnet.ps1  deploy-to-digitalocean.ps1  execute-force-close-batch.ts  fix-alt-treasury-pda.ts  flush-redis-cache.ts  force-close-escrows.ts  fund-devnet-wallets.ps1  fund-devnet-wallets.sh  fund-staging-wallets.ps1  generate-close-commands.ts  generate-missing-tasks.js  generate-monkey-metadata.ts  generate-sample-receipt.ts  inspect-escrow-accounts.ts  install-solana-tools.ps1  investigate-tree-state.ts  list-staging-agreements.ts  list-tasks.ts  (+63 more)
(+1459 files in other folders)
