[workspace]
members = [
    "programs/escrow"
]
resolver = "2"

# Force resolution to compatible versions
# Using Anchor 0.29.0 (most stable with Bubblegum ecosystem)
[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
mpl-bubblegum = "0.7.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"        # Optimize for size (not speed)
strip = true           # Strip debug symbols
panic = "abort"        # Smaller panic handler

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

