[package]
name = "easyescrow"
version = "0.1.0"
description = "Atomic Swap Program for NFT/cNFT trading on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "easyescrow"

[features]
default = ["staging"]  # Default to staging for development (use explicit --features mainnet for production)
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Environment-specific features (mutually exclusive)
mainnet = []
devnet = []
staging = []
localnet = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"
mpl-bubblegum = "2.1.1"
spl-account-compression = "0.4.0"

