[package]
name = "easyescrow"
version = "0.1.0"
description = "Atomic Swap Program for NFT/cNFT trading on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "easyescrow"

[features]
default = ["staging"]  # Default to staging for development (use explicit --features mainnet for production)
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Environment-specific features (mutually exclusive)
mainnet = []
devnet = []
staging = []
localnet = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-security-txt = "1.1.1"
mpl-bubblegum = "1.2.0"

